# sox_marketplace

./: .gitignore  .gitmodules  INSTALLATION_GUIDE_COMPLETE.md  INSTALLATION_GUIDE_COMPLETE.tex  LANCER_APP.sh  QUICK_START.md  README.md  REDEPLOY.md  START_ALL.sh  bundler.local.json  deploy-all-contracts.sh  deploy-all.sh  deploy-contracts.sh  install-alto.sh  install.sh  next.config.ts  package-lock.json  package.json  reset_bundler.sh  run-alto.sh  run-anvil.sh  setup-bundler-keys.sh  start-web.sh  tsconfig.json
desktop/: index.html  main.js  package-lock.json  package.json  preload.js
src/app/: error.tsx  layout.tsx  package-lock.json  package.json  page.tsx
src/app/account/: page.tsx
src/app/components/: ClientLayout.tsx
src/app/db/: init.sql
src/app/lib/: ToastContext.tsx  UserContext.tsx  accumulator_old.ts  commitment_old.ts  encryption_old.ts  helpers.ts  sqlite.ts  useEthChfRate.ts
src/app/listings/: page.tsx
src/app/marketplace/: page.tsx
src/app/sponsor/: page.tsx
src/app/user/: page.tsx
src/hardhat/: deploy_libraries.ts  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
src/hardhat/contracts/: AES128CtrEvaluator.sol  AccumulatorSOX.sol  CommitmentSOX.sol  DisputeDeployer.sol  DisputeSOX.sol  DisputeSOXAccount.sol  DisputeSOXHelpers.sol  DisputeSOX_V1.sol  Eip7702Account.sol  EvaluatorSOX.sol  EvaluatorSOX_V2.sol  GasComparison.sol  (+4 more)
src/wasm/: Cargo.toml  deploy.sh
src/wasm/src/: accumulator.rs  aes_ctr.rs  circuits.rs  circuits_v2.rs  commitment.rs  encryption.rs  lib.rs  sha256.rs  simple_operations.rs  utils.rs
(+159 files in other folders)
