[package]
name = "crypto-lib"
version = "0.0.1"
edition = "2021"

[dependencies]
sha2-compress = "0.7.2"
wasm-bindgen = "0.2"
aes = "0.8.4"
ctr = "0.9.2"
rand = "0.9.1"
sha3 = "0.10.8"
js-sys = "0.3.77"
rayon = "1.10.0"
prefix-hex = "0.7.1"
serde = { version = "1.0.219", features = ["derive"] }
rmp-serde = "1.0"
sha2 = "0.10.9"
ethabi = "18.0.0"
anyhow = "1.0"
serde_json = "1.0"
hex = "0.4"

# 2 versions of getrandom because ethabi uses an outdated version ugh
getrandom = { version = "0.3.3", features = ["wasm_js"] }
getrandom_ethabi = { package = "getrandom", version = "0.2", features = ["js"] }

[lib]
name = "crypto_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "precontract_cli"
path = "src/bin/precontract_cli.rs"

[[bin]]
name = "check_precontract_cli"
path = "src/bin/check_precontract_cli.rs"

[[bin]]
name = "compute_proofs_cli"
path = "src/bin/compute_proofs_cli.rs"

[[bin]]
name = "performance_test_1gb"
path = "src/bin/performance_test_1gb.rs"
